feature - all test running after removal of foid field in domain entities