@@ -4,7 +4,7 @@
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of
  * the License at
  *
- *          http://www.apache.org/licenses/LICENSE-2.0
+ *          https://apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
  * OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
@@ -17,6 +17,7 @@ import org.apache.commons.io.IOUtils;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -37,7 +38,7 @@ public final class Gravatar {
 
     public byte[] avatar(String email, int sizeInPixels, GravatarRating rating, GravatarImage image) {
         try {
-            return IOUtils.toByteArray(new URL(getUrl(email, sizeInPixels, rating, image)));
+            return IOUtils.toByteArray(URI.create(getUrl(email, sizeInPixels, rating, image)));
         } catch (IOException e) {
             throw new UncheckedIOException(e);
         }
